# smartsrx

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  README.md  SMARTS_RX.txt  pyproject.toml  smartsrx-env.yml  smartsrx.json  smartsrx_example.py  smartsrx_schema.json
docs/: SMARTS_RX_documentation.docx
docs/publication_materials/: SMARTS_RX_USPTO.docx
smartsrx/: __init__.py  create_json.py  hierarchy_model.py  update_readme_table.py
tests/: test_hierarchy_model.py
